k8s/state-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: state-service-deployment
  labels:
    run: state-service
spec:
  replicas: 2
  selector:
    matchLabels:
      run: state-service
  template:
    metadata:
      labels:
        run: state-service
    spec:
      containers:
        - name: state-service
          image: visheshawasthi/state-service
          ports:
            - containerPort: 8081
              protocol: TCP
