k8s/country-service.yml
kind: Service
apiVersion: v1
metadata:
  name: country-service
spec:
  selector:
    run: country-service
  ports:
    - name: port1
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
