k8s/deployment.yml
# Deployment for country-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: country-service-deployment
  labels:
    run: country-service
    env: development
    owner: VisheshAwasthi
spec:
  replicas: 1
  selector:
    matchLabels:
      run: country-service
  template:
    metadata:
      labels:
        run: country-service
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: country-config
      containers:
        - name: country-service
          image: visheshawasthi/country-service:dev
          imagePullPolicy: Always
          ### Resource request and limits ###
#          resources:
#            requests:
#              memory: "500Mi"
#              cpu: "0.5"
#            limits:
#              memory: "1000Mi"
#              cpu: "1"
          ### Liveness ###
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 4040
            initialDelaySeconds: 30
            periodSeconds: 5
          ### Readiness ###
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health/readiness
              port: 4040
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 8080
              protocol: TCP
---
# Service for country-service
kind: Service
apiVersion: v1
metadata:
  name: country-service
  labels:
    env: development
    owner: VisheshAwasthi
spec:
  selector:
    run: country-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
# Deployment for state-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: state-service-deployment
  labels:
    run: state-service
    env: development
    owner: VisheshAwasthi
spec:
  replicas: 1
  selector:
    matchLabels:
      run: state-service
  template:
    metadata:
      labels:
        run: state-service
        env: development
        owner: VisheshAwasthi
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: state-config
      containers:
        - name: state-service
          image: visheshawasthi/state-service:dev
          imagePullPolicy: Always
          ### Resource request and limits ###
#          resources:
#            requests:
#              memory: "500Mi"
#              cpu: "0.5"
#            limits:
#              memory: "1000Mi"
#              cpu: "1"
          ### Liveness ###
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 4041
            initialDelaySeconds: 30
            periodSeconds: 5
          ### Readiness ###
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health/readiness
              port: 4041
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 8081
              protocol: TCP
---
# Service for state-service
kind: Service
apiVersion: v1
metadata:
  name: state-service
  labels:
    env: development
    owner: VisheshAwasthi
spec:
  selector:
    run: state-service
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
