k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
spec:
  rules:
      - http:
          paths:
          - path: /country-service
            pathType: Prefix
            backend:
              service:
                name: country-service
                port:
                  number: 8080
